# Swarmathon-MC-UMD-Public

./: README.md  run.sh
Swarmathon-Arduino/libraries/Odometry/: Odometry.h
arduino/libraries/Odometry/: Odometry.cpp
arduino/swarmie_control/: swarmie_control.ino
misc/: KSC.cal  deploy.sh  load_swarmie_control_sketch.sh  nohup.out  rover_onboard_node_launch.sh
src/abridge/src/: abridge.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: MainLoop.cpp  MainLoop.cpp.autosave  SMACS.cpp  SMACS.h
src/controller/src/behaviors/: AvoidBehavior.cpp  AvoidCenterBehavior.cpp  AvoidCenterBehavior.h  BehaviorInterface.h  BehaviorTypes.h  Behaviors.cpp  Behaviors.h  CalibrateBehavior.cpp  DriveBehavior.cpp  DropBehavior.cpp  DropBehavior.h  PickUpBehavior.cpp  PickUpBehavior.h  SearchAlgorithm.cpp  SearchAlgorithm.h  SearchAlgorithmRelative.cpp  SearchAlgorithmRelative.h  SearchAlgorithmSixRovers.cpp  SearchAlgorithmSixRovers.h  SearchBehavior.cpp  SearchBehavior.h  SearchForDropBehavior.cpp  SearchForDropBehavior.h
src/controller/src/controllers/: ClawController.cpp  DriveController.cpp  DriveController.h  HiveController.cpp  HiveController.h  OffsetController.cpp  OffsetController.h
src/controller/src/handlers/: Handlers.cpp  Handlers.h
src/hive/: CMakeLists.txt  package.xml
src/hive/src/: Hive.cpp  Robot.h
src/hive_srv/: CMakeLists.txt  package.xml
src/hive_srv/srv/: CheckIn.srv  roundType.srv
src/rqt_rover_gui/src/: rover_gui_plugin.cpp  rover_gui_plugin.h
src/sbridge/src/: sbridge.cpp  sbridge.h
